# firmbench

./: .env.gcp.example  .gitignore  .vercelignore  DEPRECATED-plan-market-discovery.md  Dockerfile.hud  HUD_EVAL.md  PHASE_D_RUN.md  PLAN-market-discovery.md  PLAN.md  README.md  RFT_RUN.md  SUBMISSION.md  SaaSBench.pptx  agent.py  agent_vertex.py  env.py  env_multiagent.py  ep_firmbench.py  export_replay_multiagent.py  export_world.py  grpo.html  grpo_curve_s308sdlb.json  hud_env.py  hud_tasks.py  index.html  make_slides.py  multiagent.py  pitch.html  plot_leaderboard.py  pyproject.toml  renderer.py  replay.html  replay_multiagent.html  requirements-gcp.txt  requirements-rl.txt  requirements.txt  rft.py  rft_gcp.py  rft_hud.py  rl_grpo.py  (+9 more)
.hud/: config.json
artifacts/: grpo_curve.json
artifacts/42_naive/: manifest.json
artifacts/42_oracle/: manifest.json
artifacts/42_qwen3-8b-base/: ad_r1.html  feat_r0.html  manifest.json
artifacts/42_qwen3-8b-grpo-ep1/: ad_r0.html  ad_r1.html  ad_r2.html  ad_r3.html  ad_r4.html  ad_r5.html  ad_r6.html  ad_r7.html  ad_r8.html  ad_r9.html  (+3 more)
docs/: gcp-pipeline.md
firmbench_mcp/: firmbench_adapter.py  firmbench_mcp.py  server.py
grpo/: RESULTS.md  RUN_NOTES.md  base_eval.py  export_replay.py  make_dataset.py  make_demo_data.py  requirements.txt  test_firmbench_grpo.py
ma_eval_results/: leaderboard.html  seed123.json  seed42.json  seed7.json
rft_hud_out/: curve.json
rft_hud_out_smoke/: curve.json
rft_hud_team_out/: curve.json
rl_grpo_out/: grpo_curve.json
tests/: test_multiagent.py  test_phase_a.py  test_rft_hud.py
(+62 files in other folders)
